@@ -4,23 +4,13 @@ import appeng.api.stacks.AEKey;
 import appeng.util.prioritylist.IPartitionList;
 import it.unimi.dsi.fastutil.objects.Reference2BooleanMap;
 import it.unimi.dsi.fastutil.objects.Reference2BooleanOpenHashMap;
-import net.minecraft.core.Holder;
-import net.minecraft.core.Registry;
-import net.minecraft.tags.TagKey;
-import net.minecraft.world.item.Item;
-import net.minecraft.world.level.material.Fluid;
 import org.jetbrains.annotations.NotNull;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
-import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.function.Predicate;
 
 public class TagPriorityList implements IPartitionList {
-    private static final Logger LOGGER = LoggerFactory.getLogger("ExtendedAE-TagFilter");
-    private static final boolean DEBUG_ENABLED = true; // Set to false to disable logging
 
     // Store raw expressions for isEmpty check and potentially for debugging/recompiling.
     private final String rawWhiteListExpression;
@@ -34,7 +24,7 @@ public class TagPriorityList implements IPartitionList {
 
     // Cache results per AEKey instance for performance.
     // Using AEKey directly handles potential variations within the same item/fluid primary key.
-    private final Reference2BooleanMap<AEKey> memory = new Reference2BooleanOpenHashMap<>();
+    private final Reference2BooleanMap<Object> memory = new Reference2BooleanOpenHashMap<>();
 
     /**
      * Creates a tag-based partition list using complex filter expressions.
@@ -53,20 +43,23 @@ public class TagPriorityList implements IPartitionList {
 
         // Determine if the whitelist should be actively checked.
         // An empty/whitespace-only expression means the whitelist doesn't restrict anything.
-        this.isWhitelistActive = !this.rawWhiteListExpression.trim().isEmpty();
+        this.isWhitelistActive = this.rawWhiteListExpression.isBlank();
     }
 
     @Override
     public boolean isListed(AEKey input) {
-        // Use the AEKey itself as the cache key.
+        // empty filter pass all inputs
+        if (this.isEmpty()) {
+            return true;
+        }
         // computeIfAbsent ensures eval is called only once per key.
-        return this.memory.computeIfAbsent(input, this::eval);
+        return this.memory.computeIfAbsent(input.getPrimaryKey(), this::eval);
     }
 
     @Override
     public boolean isEmpty() {
         // The filter is considered empty if neither a whitelist nor a blacklist expression is provided.
-        return rawWhiteListExpression.trim().isEmpty() && rawBlackListExpression.trim().isEmpty();
+        return rawWhiteListExpression.isBlank() && rawBlackListExpression.isBlank();
     }
 
     @Override
@@ -76,13 +69,13 @@ public class TagPriorityList implements IPartitionList {
     }
 
     /**
-     * Evaluates if the given AEKey matches the filter rules (whitelist/blacklist).
+     * Evaluates if the given Primary Key matches the filter rules (whitelist/blacklist).
      * This method is called by the caching mechanism in `isListed`.
      *
-     * @param input The AEKey (Item or Fluid key) to evaluate.
+     * @param input The Primary Key (Item or Fluid key) to evaluate.
      * @return True if the key passes the filter rules, false otherwise.
      */
-    private boolean eval(@NotNull AEKey input) {
+    private boolean eval(@NotNull Object input) {
         // Evaluate both predicates against the key's tags.
         // TagExpParser.evaluate handles getting the tags from the key.
         final boolean whiteMatches = TagExpParser.evaluate(this.whiteListPredicate, input);
@@ -97,10 +90,5 @@ public class TagPriorityList implements IPartitionList {
             return !blackMatches;
         }
     }
-    
-    private String formatTags(Set<TagKey<?>> tags) {
-        return tags.stream()
-                .map(tag -> tag.location().toString())
-                .collect(Collectors.joining(", "));
-    }
+
 }
